<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".loginActivity">
    
    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20sp">
        
        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="?attr/logo"
            android:transitionName="img_logo"
            android:contentDescription="@string/todo" />
        
    </LinearLayout>

<!--    <ImageView-->
<!--        android:id="@+id/image_bottom"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/background_bottom"-->
<!--        android:layout_below="@+id/layout_top"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_started"
            android:textSize="15sp"
            android:paddingStart="20sp"
            android:paddingEnd="20dp"
            android:layout_marginTop="-10dp"
            android:layout_marginStart="10dp"
            />

    <soup.neumorphism.NeumorphCardView
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        app:neumorph_shapeType="pressed">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/no_background"
            android:textCursorDrawable="@drawable/cursor"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:autofillHints="" />

    </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/no_background"
                android:textCursorDrawable="@drawable/cursor"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints="" />

        </soup.neumorphism.NeumorphCardView>
        
        <soup.neumorphism.NeumorphButton
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:text="@string/sign_in"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/register_here"
            android:textColor="#3F51B5"
            android:textColorLink="@color/link"
            android:textSize="17sp" />

    </LinearLayout>


</RelativeLayout>